--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -315,6 +315,9 @@ header {
   .button-nav-down {
     display: none;
   }
+  .user-name {
+    display: none;
+  }
 }
 
 @media only screen and (max-width: 700px) {
