--- a/src/app/App.css
+++ b/src/app/App.css
@@ -19,8 +19,9 @@ header {
   /* background-color: brown; */
   display: flex;
   /* flex-direction: column; */
-  /* align-items: center; */
-  justify-content: center;
+  /* align-content: flex-start; */
+  justify-content: space-evenly;
+  /* justify-items: flex-start; */
   width: 100vw;
   position: relative;
   top: 80px;
