--- a/src/components/aside/Aside.css
+++ b/src/components/aside/Aside.css
@@ -5,6 +5,7 @@ aside.public-info {
   border: 2px solid black;
   display: flex;
   flex-direction: column;
+  background-color: #fcfcfc;
   /* justify-content: space-evenly; */
   /* align-items: center; */
   /* align-content: space-around; */
