--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,10 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap");
 
-:root {
+/* :root {
   --white: rgb(255, 255, 255);
   --text-color: rgb(28, 28, 28);
   --nice-background-color: rgb(246, 247, 248);
-}
+} */
 
 /* Header Section */
 /* header {
@@ -57,7 +57,11 @@
 }
 
 .fa-reddit {
-  color: rgb(255, 69, 0);
+  color: var(--logo-color);
+}
+
+.fontA {
+  color: var(--logo-color);
 }
 
 /* Button Nav-down */
