--- a/public/style.css
+++ b/public/style.css
@@ -14,11 +14,15 @@ body {
   background-color: rgb(218, 224, 230);
   color: var(--text-color);
   font-family: "Open Sans", sans-serif;
-  background: no-repeat center center fixed;
+  /* background: no-repeat center center fixed; */
+  background-repeat: no-repeat;
+  background-position: center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover;
-  /* position: relative; */
+  background-size: 100% 100%;
+  background-attachment: fixed;
+  /* position: fixed; */
+  /* height: 100vh; */
   /* z-index: 10; */
 }
