--- a/src/app/App.css
+++ b/src/app/App.css
@@ -20,6 +20,7 @@ header {
   display: flex;
   /* flex-direction: column; */
   /* align-content: flex-start; */
+  /* align-items: flex-start; */
   justify-content: space-evenly;
   /* justify-items: flex-start; */
   width: 100vw;
