remove aside 780px and reddit-div make 90vw

--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -143,7 +143,9 @@ span {
 } */
 
 @media only screen and (max-width: 780px) {
-  /* remove aside section and put the subreddit list inside the navbar */
+  .reddit-div {
+    width: 90vw;
+  }
 }
 
 @media only screen and (max-width: 700px) {
