--- a/src/components/aside/Aside.css
+++ b/src/components/aside/Aside.css
@@ -3,8 +3,7 @@
   display: flex;
   flex-direction: column;
   gap: 50px;
-  position: sticky;
-  top: 90px;
+  height: 100%;
 }
 
 aside.public-info {
@@ -71,8 +70,10 @@ aside.public-info {
   gap: 20px;
   background-color: var(--nice-background-color);
   border: 2px solid black;
-  height: 450px;
+  height: 600px;
   overflow-y: scroll;
+  position: sticky;
+  top: 90px;
 }
 
 #aside-title {
@@ -114,4 +115,10 @@ aside.public-info {
 .list-iconImg {
   width: 100%;
   height: 100%;
+}
+
+@media only screen and (max-width: 780px) {
+  .aside-container {
+    display: none;
+  }
 }
