--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -75,6 +75,11 @@ span {
   width: 18px;
   height: 18px;
   background-color: rgb(248, 249, 250);
+  border: 2px solid black;
+  border-radius: 50%;
+}
+
+.smallsizeImage {
   border-radius: 50%;
 }
 
