--- a/src/components/aside/Aside.css
+++ b/src/components/aside/Aside.css
@@ -102,8 +102,27 @@ aside.public-info:hover {
   display: flex;
   align-items: center;
   gap: 30px;
-  border-bottom: 2px solid black;
+  /* border-bottom: 2px solid rgba(173, 216, 230, 0.2); */
   padding: 10px;
+  position: relative;
+}
+
+.article-background {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  background: linear-gradient(to top, rgba(173, 216, 230, 1), transparent);
+  transition: opacity 600ms linear;
+  opacity: 0.1;
+}
+
+.list-prefix,
+.list-icon-container {
+  position: relative;
+  z-index: 5;
+  cursor: pointer;
 }
 
 .article-map:last-child {
