--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -225,11 +225,35 @@
 
 .user-button {
   display: flex;
-  cursor: pointer;
+  cursor: pointer !important;
   align-items: center;
   gap: 5px;
   position: relative;
+  z-index: -2;
   margin: 0 3vw;
+}
+.user-link-button {
+  cursor: not-allowed;
+}
+.user-button:hover {
+  cursor: pointer !important;
+}
+
+.user-button:focus {
+  outline: 0 !important;
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0) !important;
+  cursor: pointer !important;
+}
+
+.square-logo {
+  width: 40px;
+  height: 40px;
+  color: var(--logo-color) !important;
+  cursor: pointer !important;
+}
+
+.user-name {
+  cursor: pointer !important;
 }
 
 .user-down-arrow {
@@ -249,13 +273,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 20px;
   justify-content: space-around;
   position: fixed;
-  top: 10vh;
+  top: 80px;
   right: 0;
   background-color: var(--white);
   width: 100%;
-  height: 90vh;
+  height: 87.5vh;
   overflow-y: scroll;
 }
 
@@ -314,14 +339,27 @@
   .navbar-ul-second {
     padding: 0 10px;
   }
-  .search-input {
-    width: 40vw;
-  }
   .button-nav-down {
     display: none;
   }
   .user-name {
     display: none;
+  }
+  .search-input {
+    width: 60vw;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .burger {
+    display: block;
+    margin: 0 5vw;
+  }
+  .search-form-wrapper {
+    display: none;
+  }
+  .small-menu-ul {
+    height: 93vh;
   }
 }
 
@@ -331,9 +369,10 @@
   }
 }
 
-@media only screen and (max-width: 600px) {
-  .search-form-wrapper {
+@media only screen and (max-width: 680px) {
+  .user-button {
     display: none;
+    z-index: 2;
   }
   .search-input {
     width: 80vw;
@@ -355,8 +394,41 @@
   .user-link-button {
     display: none;
   }
-  .burger {
-    display: block;
-    margin: 0 5vw;
+  .square-reddit {
+    display: none;
+  }
+  .small-menu-ul {
+    height: 79.5vh;
+    /* try 79.2 if no good  */
+  }
+}
+
+@media only screen and (max-width: 540px) {
+  .small-menu-ul {
+    height: 90vh;
+  }
+}
+
+@media only screen and (max-width: 376px) and (min-width: 375px) {
+  .small-menu-ul {
+    height: 88vh;
+  }
+}
+
+@media only screen and (max-width: 360px) {
+  .small-menu-ul {
+    height: 89vh;
+  }
+}
+
+@media only screen and (max-width: 330px) {
+  .small-menu-ul {
+    height: 87vh;
+  }
+}
+
+@media only screen and (max-width: 300px) {
+  .small-menu-ul {
+    height: 89vh;
   }
 }
