--- a/src/components/card/video/Video.css
+++ b/src/components/card/video/Video.css
@@ -99,7 +99,7 @@
 }
 
 .slider-input {
-  width: 40%;
+  width: 80%;
 }
 
 .cog-container {
@@ -149,7 +149,7 @@
 #giant-container {
   position: absolute;
   width: 100%;
-  height: 80%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -163,80 +163,37 @@
 }
 
 #giant-circle {
-  background-color: transparent;
-  width: 7rem;
-  height: 7rem;
-  border: 10px solid rgba(173, 216, 230, 0.2);
-  border-radius: 60%;
+  background-color: rgba(47, 50, 51, 0.6);
+  width: 6.5rem;
+  height: 6.5rem;
+  border-radius: 50%;
+  left: -41px;
+  bottom: -40px;
   position: absolute;
-  left: -40px;
 }
 
 #giant-play-button {
   position: absolute;
-  top: 10px;
   width: 0;
   height: 0;
-  border-top: 3rem solid transparent;
-  border-bottom: 3rem solid transparent;
-  border-left: 4rem solid rgba(173, 216, 230, 0.2);
+  border-top: 2rem solid transparent;
+  border-bottom: 2rem solid transparent;
+  border-left: 3rem solid rgba(234, 236, 236, 1);
+  border-radius: 4%;
+  bottom: -20px;
+  left: -5px;
 }
 
-@media only screen and (max-width: 1080px) {
-  /* #giant-play-button {
-    top: 1px;
-  } */
-  /* #giant-circle {
-    top: -7px;
-    left: -44px;
-  } */
-}
-
-@media only screen and (max-width: 650px) {
-  /* #giant-play-button {
-    border-top: 30px solid transparent;
-    border-bottom: 30px solid transparent;
-    border-left: 40px solid rgba(173, 216, 230, 0.2);
-  } */
-  /* #giant-circle {
-    width: 70px;
-    height: 70px;
-    border: 6px solid rgba(173, 216, 230, 0.2);
-    top: -2px;
-    left: -23px;
-  } */
-}
-
-@media only screen and (max-width: 450px) {
-  .slider-input {
-    width: 80%;
-  }
-  /* #giant-play-button {
-    border-top: 25px solid transparent;
-    border-bottom: 25px solid transparent;
-    border-left: 35px solid rgba(173, 216, 230, 0.2);
-    top: 15px;
-    left: -10px;
-  } */
-  /* #giant-circle {
-    width: 55px;
-    height: 55px;
-    border: 4px solid rgba(173, 216, 230, 0.2);
-    left: -27px;
-    top: 15px;
-  } */
+@media only screen and (max-width: 700px) {
   #giant-play-button {
     border-top: 1.3rem solid transparent;
     border-bottom: 1.3rem solid transparent;
-    border-left: 1.8rem solid rgba(173, 216, 230, 0.2);
-    /* top: 15px;
-    left: -10px; */
+    border-left: 2rem solid rgba(234, 236, 236, 1);
   }
   #giant-circle {
-    width: 3.5rem;
-    height: 3.5rem;
-    border: 7px solid rgba(173, 216, 230, 0.2);
-    left: -20px;
-    top: 5px;
+    width: 4.2rem;
+    height: 4.2rem;
+    left: -27.5px;
+    bottom: -33px;
   }
 }
