--- a/src/app/App.css
+++ b/src/app/App.css
@@ -1,29 +1,24 @@
+body {
+  overflow-x: hidden;
+}
+
 header {
   height: 80px;
   background-color: var(--white);
   position: fixed;
   top: 0vh;
-  /* bottom: 0vh; */
   width: 100vw;
   z-index: 20;
   display: flex;
-  left: 0vw;
-  gap: 20px;
+  /* gap: 20px; */
   align-items: center;
   justify-content: space-between;
-  /* margin: 0 auto; */
   padding: 0 20px;
 }
 
 .the-flex-container {
-  /* background-color: brown; */
   display: flex;
-  /* flex-direction: column; */
-  /* align-content: flex-start; */
-  /* align-items: flex-start; */
   justify-content: space-evenly;
-  /* justify-items: flex-start; */
   width: 100vw;
-  position: relative;
-  top: 80px;
+  padding-top: 80px;
 }
