--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,9 +1,3 @@
-.banner-section {
-  /* width: 100vw; */
-  /* height: 400px; */
-  /* background-color: red; */
-}
-
 .header-img-wrapper {
   height: 80px;
   width: 100vw;
@@ -35,20 +29,13 @@
   width: 100vw;
   height: 80px;
   background-color: rgba(94, 65, 121, 0.4);
-  /* bord */
 }
 
 .title-section {
   height: 80px;
   width: 100vw;
   background-color: white;
-  /* margin: 0 auto; */
   position: relative;
-  /* display: flex; */
-  /* align-items: center; */
-  /* justify-content: space-around; */
-  /* display: grid; */
-  /* grid-template-columns: ; */
 }
 
 .icon-img {
@@ -56,10 +43,9 @@
   background-color: white;
   height: 80px;
   border-radius: 50%;
-  /* display: inline-block; */
   position: absolute;
   left: 25vw;
-  bottom: 3vh;
+  bottom: 22px;
 }
 
 .icon-img img,
@@ -70,17 +56,14 @@
 }
 
 .header-title {
-  /* display: inline-block; */
   position: absolute;
   left: 40vw;
-  bottom: 3vh;
+  bottom: 20px;
   font-size: 1.5rem;
   font-weight: 700;
 }
 
 .header-title:last-of-type {
-  /* display: inline-block; */
-  /* background-color: blue; */
   position: absolute;
   left: 40vw;
   bottom: 0;
@@ -126,7 +109,7 @@
   .icon-img {
     width: 50px;
     height: 50px;
-    bottom: 7vh;
+    bottom: 50.5px;
   }
   .header-title {
     left: 40vw;
