--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,35 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap");
 
-/* :root {
-  --white: rgb(255, 255, 255);
-  --text-color: rgb(28, 28, 28);
-  --nice-background-color: rgb(246, 247, 248);
-} */
-
-/* Header Section */
-/* header {
-  height: 10vh;
-  background-color: var(--white);
-  position: fixed;
-  top: 0vh;
-  bottom: 0vh;
-  width: 98vw;
-  z-index: 20;
-  display: flex;
-  left: 0vw;
-  gap: 20px;
-  align-items: center;
-  justify-content: space-between;
-  margin: 0 auto;
-  padding: 0 20px;
-} */
-
 /* Reddit Logo */
 .home-nav-div {
-  width: 7vw;
-  height: 7vh;
+  width: 107px;
+  height: 51px;
   position: relative;
-  left: -1vw;
+  top: 7px;
 }
 
 .all-links {
@@ -68,12 +44,14 @@
 
 .button-div-down {
   display: flex;
+  width: 30vw;
+  position: relative;
 }
 
 .button-nav-down {
   flex: 0 5 auto;
-  height: 6vh;
-  width: 25vw;
+  height: 51px;
+  width: 100%;
   display: flex;
   justify-content: space-evenly;
   border: none;
@@ -98,42 +76,41 @@
 
 .button-home {
   position: absolute;
-  right: 0vw;
-  left: 1vw;
-  top: 1vh;
+  left: 5px;
+  top: 10px;
   bottom: 0;
 }
 
 .board-clip {
   position: absolute;
-  right: 0vw;
-  left: 19vw;
-  top: 3vh;
+  right: 37px;
+  bottom: 6px;
   flex: 0 3 auto;
 }
 
 .board-clip-arrow {
   position: absolute;
-  right: 0vw;
-  left: 21vw;
-  top: 3vh;
+  right: 27px;
+  bottom: 6px;
   flex: 0 3 auto;
 }
 
 .down-arrow {
   position: absolute;
-  right: 0vw;
-  left: 23vw;
-  top: 3vh;
+  right: 10px;
+  bottom: 4px;
   flex: 0 3 auto;
 }
 
 .div-menu {
   position: absolute;
   background-color: white;
-  top: 8vh;
+  top: 50px;
+  left: 15px;
+  right: 0px;
   padding-right: 10px;
-  width: 25vw;
+  width: 30vw;
+  height: 250px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -148,7 +125,8 @@
 
 .input-div-menu {
   width: 80%;
-  height: 30px;
+  height: 50px;
+  padding-left: 10px;
   margin: 10px 0;
 }
 
@@ -179,18 +157,18 @@
 
 .search-icon-wrapper {
   position: relative;
-  left: 1vw;
+  left: 2vw;
 }
 
 .search-icon {
   position: absolute;
-  top: 2vh;
+  top: 20px;
   left: 0.7vw;
 }
 
 .search-input {
-  width: 24vw;
-  height: 6vh;
+  width: 30vw;
+  height: 51px;
   padding-left: 30px;
   background-color: var(--nice-background-color);
   border: 2px solid var(--nice-background-color);
@@ -269,6 +247,30 @@
   padding: 10px;
 }
 
+.burger-form-menu {
+  height: 40px !important;
+}
+
+.burger-menu-wrapper {
+  width: 100%;
+  height: 100% !important;
+  position: relative;
+}
+
+.burger-search-icon {
+  position: absolute;
+  right: 0;
+  top: 12px;
+}
+
+.burger-search-input {
+  width: 90%;
+  height: 40px;
+  padding-left: 10px;
+  position: absolute;
+  left: 0;
+}
+
 .small-menu-ul {
   display: flex;
   flex-direction: column;
@@ -305,26 +307,9 @@
   justify-self: flex-start;
 }
 
-@media only screen and (max-width: 1200px) {
-  .search-input {
-    width: 18vw;
-  }
-  .button-nav-down {
-    width: 18vw;
-  }
-  .board-clip {
-    left: 12vw;
-  }
-
-  .board-clip-arrow {
-    left: 14vw;
-  }
-
-  .down-arrow {
-    left: 16vw;
-  }
+@media only screen and (max-width: 1250px) {
   .div-menu {
-    width: 18vw;
+    left: 12px;
   }
 }
 
@@ -332,12 +317,14 @@
   .reddit {
     display: none;
   }
+  .div-menu {
+    left: 10px;
+  }
 }
 
 @media only screen and (max-width: 865px) {
-  .navbar-ul-first,
-  .navbar-ul-second {
-    padding: 0 10px;
+  .search-icon-wrapper {
+    left: -4vw;
   }
   .button-nav-down {
     display: none;
